--- a/src/css/style.css
+++ b/src/css/style.css
@@ -41,13 +41,26 @@ body {
     margin: 30px;
 }
 
-.contato .formulario input {
+.contato .formulario .input-text {
     width: 300px;
     margin-left: 22px;
     height: 35px;
     border-radius: 5px;
     border: solid 1px;
     margin-top: 15px;
+}
+
+.contato .formulario .enviar {
+    width: 300px;
+    margin-left: 22px;
+    height: 35px;
+    border-radius: 5px;
+    margin-top: 20px;
+    background-color: #3CCC87;
+    border: none;
+    color: #ffffff;
+    font-weight: 700;
+    font-size: 15px;
 }
 
 .contato .formulario #nome {
@@ -63,15 +76,6 @@ body {
     font-size: 15px;
     margin-left: 15px;
     margin-top: 10px;
-}
-
-.contato .formulario .enviar {
-    margin-top: 20px;
-    background-color: #3CCC87;
-    border: none;
-    color: #ffffff;
-    font-weight: 700;
-    font-size: 15px;
 }
 
 ::-webkit-input-placeholder {
