ajuste do responsivo para mobile

--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -5,7 +5,11 @@
     .contato .formulario {
         width: 300px;
     }
-    .contato .formulario input {
+    .contato .formulario .input-text {
+        width: 250px;
+    }
+
+    .contato .formulario .enviar {
         width: 250px;
     }
 }
